k8s/12-kafka-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: uber-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: uber-clone
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30090
      name: http
  selector:
    app: kafka-ui
